# tap-jsonl

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  dump.yaml  meltano.yml  pyproject.toml  sources.txt  taskfile.yaml
.github/workflows/: test.yml
data/: dataset1.jsonl  dataset2.jsonl  dataset3.jsonl
tap_jsonl/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  conftest.py  test_context_integrity.py  test_core.py  test_files_and_partitions.py  test_incremental_state.py  test_schema_inference.py
